--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@
     cursor: pointer;
     width: 180px;
     height: 430px;
-    border: 1px solid black;
+    border: 1px  black;
     background-color: #f0f0f0;
     padding: 10px;
     
@@ -48,3 +48,29 @@
     display: flex;
     flex-wrap:wrap;
 }
+
+.top-filter {
+    margin: 10px;
+    cursor: pointer;
+}
+
+.shimmer-container {
+    display: flex;
+    flex-wrap : wrap;
+
+}
+
+.shimmer-cards {
+    height: 400px;
+    width: 200px;
+    background-color: lightgray;
+    margin: 10px;
+
+}
+
+.login-btn{
+    padding:  0 20px;
+    cursor: pointer;
+    margin: 10px;
+}
+
