--- a/index.css
+++ b/index.css
@@ -50,10 +50,18 @@
 }
 
 .top-filter {
-    margin: 10px;
+    margin: 10px;   
     cursor: pointer;
+    
 }
 
+.search-filter {
+    margin: 10px;
+}
+
+.filter {
+    display: flex;
+}
 .shimmer-container {
     display: flex;
     flex-wrap : wrap;
@@ -73,4 +81,5 @@
     cursor: pointer;
     margin: 10px;
 }
+
 
