--- a/index.css
+++ b/index.css
@@ -1,85 +1,3 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid black;
-
-}
-
-.logo-img{
-    width: 100px;
-    
-}
-
-.nav-items {
-    font-size: large;
-}
-
-.nav-items > ul {
-    display: flex;
-
-}
-
-.nav-items>ul > li {
-    padding: 10px;
-    margin: 10px;
-    list-style: none;
-}
-
-.restocard:hover {
-    cursor: pointer;
-    width: 180px;
-    height: 430px;
-    border: 1px  black;
-    background-color: #f0f0f0;
-    padding: 10px;
-    
-}
-
-.search {
-    padding: 10px;
-}
-
-.res-img {
-    width: 150px;
-    
-}
-
-.resto-container {
-    display: flex;
-    flex-wrap:wrap;
-}
-
-.top-filter {
-    margin: 10px;   
-    cursor: pointer;
-    
-}
-
-.search-filter {
-    margin: 10px;
-}
-
-.filter {
-    display: flex;
-}
-.shimmer-container {
-    display: flex;
-    flex-wrap : wrap;
-
-}
-
-.shimmer-cards {
-    height: 400px;
-    width: 200px;
-    background-color: lightgray;
-    margin: 10px;
-
-}
-
-.login-btn{
-    padding:  0 20px;
-    cursor: pointer;
-    margin: 10px;
-}
-
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
